--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "process": "^0.11.10"
   },
   "dependencies": {
+    "@babel/preset-react": "^7.22.15",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-loading-skeleton": "^3.3.1",
