--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "test": "jest",
     "start": "parcel index.html",
     "build": "parcel build index.html -d dist",
-    "watch-test":"jest --watch"
-
+    "watch-test": "jest --watch"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +15,7 @@
     "@babel/core": "^7.23.9",
     "@babel/preset-env": "^7.23.9",
     "@babel/preset-react": "^7.23.3",
+    "@testing-library/jest-dom": "^6.4.1",
     "@testing-library/react": "^14.1.2",
     "babel-jest": "^29.7.0",
     "identity-obj-proxy": "^3.0.0",
