--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/core": "^7.23.9",
     "@babel/preset-env": "^7.23.9",
     "@babel/preset-react": "^7.23.3",
+    "@parcel/babel-preset-env": "^2.11.0",
     "@testing-library/jest-dom": "^6.4.1",
     "@testing-library/react": "^14.1.2",
     "babel-jest": "^29.7.0",
@@ -35,4 +36,4 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.15.0"
   }
-} 
+}
