--- a/package.json
+++ b/package.json
@@ -26,13 +26,15 @@
     "parcel": "^2.0.0-nightly.1500",
     "postcss": "^8.4.35",
     "process": "^0.11.10",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.4.1"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@parcel/transformer-js": "^2.11.0",
     "@reduxjs/toolkit": "^2.0.1",
+    "autoprefixer": "^10.4.17",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-loading-skeleton": "^3.3.1",
