--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "autoprefixer": "^10.4.17",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-loading-skeleton": "^3.3.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.15.0"
