--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-icons": "^5.0.1",
     "react-loading-skeleton": "^3.3.1",
     "react-redux": "^9.1.0",
-    "react-router-dom": "^6.15.0"
+    "react-router-dom": "^6.15.0",
+    "react-toastify": "^10.0.5"
   }
 }
